--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,8 @@
    "storage"
  ],
 
-   "content_scripts": [ {
-    "js": [ "jquery-3.3.1.min.js", "popup.js" ],
-    "matches": [ "http://*/*", "https://*/*"]
-  }]
+ "content_scripts": [{
+  "js": ["popup.js"],
+  "matches": [ "http://*/*", "https://*/*"]
+}]
 }
